--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,21 @@
-appdirs==1.4.4
-bcrypt==3.1.7
-cffi==1.14.1
-click==7.1.2
-distlib==0.3.1
-dnspython==2.0.0
-email-validator==1.1.1
-filelock==3.0.12
-Flask==1.1.2
+bcrypt==3.1.4
+blinker==1.4
+certifi==2016.2.28
+cffi==1.11.5
+click==6.7
+Flask==1.0
 Flask-Bcrypt==0.7.1
-Flask-Login==0.5.0
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-gunicorn==20.0.4
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Pillow==7.2.0
-pycparser==2.20
-PyYAML==5.3.1
-render==1.0.0
-six==1.15.0
-SQLAlchemy==1.3.18
-svgwrite==1.4
-Tree==0.2.4
-virtualenv==20.0.28
-Werkzeug==1.0.1
-WTForms==2.3.3
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+Pillow==5.3.0
+pycparser==2.18
+six==1.11.0
+SQLAlchemy==1.2.7
+Werkzeug==0.14.1
+WTForms==2.1
+email-validator==1.0.5
