--- a/imagenflask/requirements.txt
+++ b/imagenflask/requirements.txt
@@ -1,59 +1,41 @@
-appdirs==1.4.4
 bcrypt==3.1.7
-beautifulsoup4==4.9.1
-certifi==2020.6.20
+blinker==1.4
 cffi==1.14.1
-chardet==3.0.4
 click==7.1.2
-Cython==0.29.21
-distlib==0.3.1
+DateTime==4.3
 dnspython==2.0.0
 email-validator==1.1.1
-filelock==3.0.12
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
-Flask-Cors==3.0.8
-Flask-Ext==0.1
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
-gcloud==0.18.3
+gcloud==0.17.0
 googleapis-common-protos==1.52.0
-gunicorn==20.0.4
-html5lib==1.1
 httplib2==0.18.1
 idna==2.10
-importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
-jsonpickle==1.4.1
 jws==0.1.3
-lxml==4.5.2
-mpmath==1.1.0
-numpy==1.19.1
+MarkupSafe==1.1.1
+oauth2client==3.0.0
+ordereddict==1.1
 Pillow==7.2.0
 protobuf==4.0.0rc2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
-pycryptodome==3.9.8
+pycryptodome==3.4.3
 Pyrebase==3.0.27
-Pyrebase4==4.3.0
+python-firebase==1.2
 python-jwt==2.0.1
-PyYAML==5.3.1
-render==1.0.0
-requests-toolbelt==0.9.1
+pytz==2020.1
+requests==2.11.1
+requests-toolbelt==0.7.0
 rsa==4.6
-scipy==1.5.2
 six==1.15.0
-soupsieve==2.0.1
-svgwrite==1.4
-symengine==0.6.0
-sympy==1.6.1
-Tree==0.2.4
-urllib3==1.25.10
-virtualenv==20.0.28
-webencodings==0.5.1
+SQLAlchemy==1.3.18
 Werkzeug==1.0.1
 WTForms==2.3.3
-zipp==3.1.0
+zope.interface==5.1.0
