--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 googleapis-common-protos==1.52.0
+gunicorn==20.0.4
 httplib2==0.18.1
 idna==2.10
 itsdangerous==1.1.0
