--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ oauth2client==3.0.0
 ordereddict==1.1
 Pillow==6.2.2
 protobuf==4.0.0rc2
+psycopg2==2.8.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -38,4 +39,3 @@ SQLAlchemy==1.3.18
 Werkzeug==1.0.1
 WTForms==2.3.3
 zope.interface==5.1.0
-
