--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ DateTime==4.3
 email-validator==1.1.1
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
+Flask-CLI==0.4.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
